# Inteli-College-2024-2B-T10-SI08-G05

./: .gitignore  README.md  rest.http
documents/: README.md  negocios.docx  negocios.md  programacao.docx  programacao.md  ux.docx  ux.md
src/: .coverage  .env.example  Dockerfile.datapp  Dockerfile.etl  app.py  classe_create_dim.py  classe_create_view.py  classe_db.py  prefect.yaml  pyproject.toml  pytest.ini  relatorio.html
src/analise_exploratoria/: analiseExploratoriaDONI_STG_GHR_VW_VIAGEM_MSTRBI_DADOS.ipynb  analiseExploratoriaTABELA_BIG_DATA_REQ_MAT_202410111115.ipynb  analiseExploratoriaVIAGENS.ipynb  dmo_anl_vw_estacao.ipynb  dmo_anl_vw_tipo_embarque.ipynb  tabela_big_data_ft_falhas.ipynb  tabela_big_data_ft_ocorrencias.ipynb
src/config/: connections.py  observability.py  settings.py
src/config/schemas/: models.py
src/etl/: ingest_transform.py
src/streamlit/: app.py  utils.py
src/tests/: .coverage  readme.md  report.html  test_dim.py  test_etl.py  test_views.py
src/views/: dimensao_estacoes.py  dimensao_intervalo_dia.py  dimensao_movimentacao_tempo.py  dimensao_tipo_embarque.py  dimensao_trens_passageiros.py  view_fluxo_entre_estacoes.py  view_heatmap_pessoas_por_linha.py  view_media_intervalo_operacao_por_dia.py  view_media_tempo_porta_aberta.py  view_movimento_classificado_por_bilhete.py  view_sensores_por_data.py  view_tipos_bilhete_abundantes.py  view_tipos_bilhete_por_dia.py  view_tipos_bilhete_por_semana.py
